# dspy-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: simple_qa.py
notebooks/: Untitled.ipynb  dspy_basico.ipynb
src/dspy_lab/: __init__.py  lm_config.py
src/dspy_lab/api/: main.py
tests/: test_lm_config.py
