[project]
name = "dspy-lab"
version = "0.1.0"
description = "Notebooks y experimentos con DSPy"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy-ai>=3.1",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
